tests/samples/negative/generics/generic_variadic_unsupported.ax
module generic_variadic_unsupported;

fn log<T>(value: T, ...) -> T {
    return value;
}

fn main() -> i32 {
    return 0;
}
